--- a/doc/sphinx/Makefile
+++ b/doc/sphinx/Makefile
@@ -16,5 +16,6 @@ help:
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
+# 'TODO: sanity check if ../doxygen/xml dir is found or not. ie: docs got generated previously or not'
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
